# MckGui

./: .gitmodules  CMakeLists.txt  GuiWindow.cpp  GuiWindow.hpp  LICENSE  README.md
example/: Makefile  guitest  main.cpp
example/www/: index.html
include/: GuiWindow.hpp
src/: GuiWindow.cpp
